app/styles/templates/_search.scss
.search-box {
  position: relative;
  padding: 0;
  background-color: $light-grey;
  z-index: 100;

  input {
    padding-left: 0.5rem;
    width: 85%;
    margin: 0.5rem;
    border-radius: 0.25rem;

    @media #{$small-only} {
      width: 75%;
    }
  }

  i {
    position: absolute;
    right: 15%;
    top: 0.9rem;
    color: $black;
    font-size: 1.2rem;
    cursor: pointer;

    @media #{$small-only} {
      font-size: 1rem;
      right: 25%;
    }
  }

  a {
    color: $medium-blue !important;
    text-decoration: underline;
    position: absolute;
    top: 0.6rem;
    right: 3%;
    font-size: 1.1rem;
    font-weight: bold;

    @media #{$small-only} {
      font-size: 0.8rem;
      top: 0.8rem;
    }
  }
}

.no_result {
  text-align: center;
  font-weight: bold;
  color: white;
  margin-top: 2rem;
  @media #{$small-only} {
    font-size: 0.9rem;
  }
}

.search {
  .list.list-activity {
    margin-left: -0.7rem;
    margin-right: -0.7rem;
  }
}

.search_link {
  i {
    font-weight: bold;
    font-size: 1.3rem;
    display: inline;
    margin-right: 0.2rem;
    @media #{$small-only} {
      font-size: 1rem;
    }
  }
}

.find_more_link {
  text-align: center;
  margin-top: 1rem;
  margin-bottom: 1rem;

  a {
    text-decoration: underline;
    @media #{$small-only} {
      font-size: 0.8rem;
    }
  }
}

